  02 May 2019;  <manuel@gentoo.org> -feedreader-2.3.0.ebuild:
  net-news/feedreader: Remove obsolete ebuild.

*feedreader-2.8.2 (18 Mar 2019)

  18 Mar 2019; Manuel Friedli <manuel@fritteli.ch> +feedreader-2.8.2.ebuild:
  net-news/feedreader: Add version 2.8.2

*feedreader-2.3.0 (29 Sep 2018)

  29 Sep 2018; Manuel Friedli <manuel@fritteli.ch> +feedreader-2.3.0.ebuild:
  net-news/feedreader: Add ebuild for feedreader 2.3.0

*feedreader-2.0.2-r2 (21 Feb 2018)

  21 Feb 2018; Manuel Friedli <manuel@fritteli.ch> +feedreader-2.0.2-r2.ebuild,
  +files/0001-fix-webkit2gtk-vapi.patch, -feedreader-2.0.2-r1.ebuild,
  -files/0001-Add-webkit2gtk-vapi.patch:
  net-news/feedreader:  Replace that huge patch with a smaller one, based on
  github pullrequest no. 622: https://github.com/jangernert/FeedReader/pull/622

  06 Sep 2017; Manuel Friedli <manuel@fritteli.ch> -feedreader-1.6.2-r1.ebuild:
  net-news/feedreader:  Prune version 1.6.2-r1

*feedreader-1.6.2-r1 (30 Jul 2017)
*feedreader-2.0.2-r1 (30 Jul 2017)

  30 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +feedreader-1.6.2-r1.ebuild,
  +feedreader-2.0.2-r1.ebuild, -feedreader-1.6.2.ebuild,
  -feedreader-2.0.2.ebuild:
  net-news/feedreader:  Fix installation target for feedreader ebuilds.

*feedreader-2.0.2 (15 Jul 2017)

  15 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +feedreader-2.0.2.ebuild:
  net-news/feedreader:  Add ebuild for version 2.0.2

  05 Sep 2016; Manuel Friedli <manuel@fritteli.ch> feedreader-1.6.2.ebuild:
  net-news/feedreader:  fixed feedreader ebuild for EAPI="6"

  01 Sep 2016; Manuel Friedli <manuel@fritteli.ch> -feedreader-1.2.1-r1.ebuild,
  -feedreader-1.4.3.ebuild, feedreader-1.6.2.ebuild, metadata.xml:
  net-news/feedreader:  updated to EAPI="6" and deleted old ebuilds

*feedreader-1.6.2 (30 Aug 2016)

  30 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +feedreader-1.6.2.ebuild,
  -feedreader-1.6_beta1.ebuild:
  net-news/feedreader:  added ebuild for version 1.6.2 and removed ebuild for