@@ -1,4 +1,6 @@
+DIST v2.10.0.tar.gz 1195329 BLAKE2B 9bf889b6375c7abd5656fa1fac6785cbf691285ea04e1a04d642ed3f42b4a73c50dd79b0a9fef1f5a23e407e49df02c3ec10023b78c8d7cd089be8b59daccdfb SHA512 faaaf30484ae793732d929b5f4faad665a815fab49652782efeb51beab09062c9ff72b457ae2a7b3961d0206e913303a54a2c769d4a6f4e2429cabb6183c952f
 DIST v2.8.2.tar.gz 812526 BLAKE2B a268d5714dfaaa5b9d53a3cf64ef20401026612acd3dafca91f80b33d35b01527bbe0da58dfcc586caadcd14dab15a1d44bb6295e7fcc321def62c1690c9425c SHA512 9d0016c9d5800cc91310c83b2abd6285cb4f15a436642b8e52621595c206e0c27e013e42c63c646ca81a792d3534d790762db6853617ee9cef57cb2146fa8d0f
+EBUILD feedreader-2.10.0.ebuild 1168 BLAKE2B d44de7cc353e09a55b40738ba16d37658eb20afdaf343e45020f65fd7f9395a4c6cefe86a83b716da0f4a848e8a694407088524a97ee5d95d73f45ea7a15af0d SHA512 fa1d5039165d77da0f599046f6a7968e1c283fe93cdd57bcab427865f6f11d6f16e1fa6578046997ffe8a847cea70ffaf505fa066b7880b0e4e062dee8a6ac12
 EBUILD feedreader-2.8.2.ebuild 1168 BLAKE2B d44de7cc353e09a55b40738ba16d37658eb20afdaf343e45020f65fd7f9395a4c6cefe86a83b716da0f4a848e8a694407088524a97ee5d95d73f45ea7a15af0d SHA512 fa1d5039165d77da0f599046f6a7968e1c283fe93cdd57bcab427865f6f11d6f16e1fa6578046997ffe8a847cea70ffaf505fa066b7880b0e4e062dee8a6ac12
-MISC ChangeLog 2373 BLAKE2B cd35a644d6f74116fa74eddd6b7f3d8e284f897c5133c7282a4d8d4566fdc3bcd0350bc2c0dc204aed090c0f3c994c473014688266a575fdf388fa3461cb9205 SHA512 61d94ee5c4ec5cad1ce6829f9a9506917bf06b0f601fe8ebba97d40941365fb720e6bd7e72a6d399d8f177a13aca9086c3310dd0fb7a0c1a4bc7289f88508bca
+MISC ChangeLog 2540 BLAKE2B d41b319160157f028fa4c3f5d77ac2ac2d3ebf62ecbc457898fa8b49cde49bcc6721a2241bef9aa2ea9ef4b29ee0ca5a978d1249c4e727097320d1bfee397cbe SHA512 c5ffcbbd967103965f09cfa7ca93ba26688ef676eaeec979669e41a449941a82eeee159d5625ec9c863530108dbd1b612ab0e5453e112e14f703e4e1c024d8b9
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
